@@ -1,7 +1,7 @@
 /* mpz_sqrtrem(root,rem,x) -- Set ROOT to floor(sqrt(X)) and REM
    to the remainder, i.e. X - ROOT**2.
 
-Copyright 1991, 1993, 1994, 1996, 2000, 2001, 2005, 2011 Free Software
+Copyright 1991, 1993, 1994, 1996, 2000, 2001, 2005, 2011, 2012 Free Software
 Foundation, Inc.
 
 This file is part of the GNU MP Library.
@@ -28,12 +28,9 @@ mpz_sqrtrem (mpz_ptr root, mpz_ptr rem, mpz_srcptr op)
 {
   mp_size_t op_size, root_size, rem_size;
   mp_ptr root_ptr, op_ptr;
-  mp_ptr free_me;
-  mp_size_t free_me_size;
   TMP_DECL;
 
   TMP_MARK;
-  free_me = NULL;
   op_size = SIZ (op);
   if (op_size <= 0)
     {
@@ -54,16 +51,13 @@ mpz_sqrtrem (mpz_ptr root, mpz_ptr rem, mpz_srcptr op)
 
   if (ALLOC (root) < root_size)
     {
-      if (root_ptr == op_ptr)
-	{
-	  free_me = root_ptr;
-	  free_me_size = ALLOC (root);
-	}
-      else
-	(*__gmp_free_func) (root_ptr, ALLOC (root) * BYTES_PER_MP_LIMB);
+      /* From size relations, we can tell ROOT != OP.  */
+      ASSERT (root_ptr != op_ptr);
+
+      __GMP_FREE_FUNC_LIMBS (root_ptr, ALLOC (root));
 
       ALLOC (root) = root_size;
-      root_ptr = (mp_ptr) (*__gmp_allocate_func) (root_size * BYTES_PER_MP_LIMB);
+      root_ptr = __GMP_ALLOCATE_FUNC_LIMBS (root_size);
       PTR (root) = root_ptr;
     }
   else
@@ -87,8 +81,5 @@ mpz_sqrtrem (mpz_ptr root, mpz_ptr rem, mpz_srcptr op)
      give only the square root remainder, if the user calls if with
      ROOT == REM.  */
   SIZ (rem) = rem_size;
-
-  if (free_me != NULL)
-    (*__gmp_free_func) (free_me, free_me_size * BYTES_PER_MP_LIMB);
   TMP_FREE;
 }
